ops/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hd-deployment
spec:
  selector:
    matchLabels:
      app: hd-app
  replicas: 20
  template:
    metadata:
      labels:
        app: hd-app
    spec:
      containers:
      - name: hd-app
        image: cd.docker-registry.corp.yahoo.co.jp:4443/hosted-danger/hosted-danger-image:latest
        ports:
        - containerPort: 80
