ops/kube/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hd-service
spec:
  selector:
    app: hd-app
  ports:
  - protocol: TCP
    port: 30080
    targetPort: 80
