ops/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hd-service
spec:
  selector:
    app: hd-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 443
  type: NodePort
