ops/kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hd-ingress
spec:
  backend:
    serviceName: hd-service
    servicePort: 30080
